--- a/index.css
+++ b/index.css
@@ -2,9 +2,36 @@ html {
     background-color: black;
 }
 
-h1 {
+a {
+    display: block;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 100;
     font-size: 40px;
+    text-decoration: none;
+    color: white;
+}
+
+/* Remove bullets from unordered lists */
+ul {
+    list-style-type: none;
+}
+
+/* Remove bullets from ordered lists */
+ol {
+    list-style-type: none;
+}
+
+.list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column; /* Arrange items vertically */
+}
+
+.list li {
+    text-align: center;
+    flex: 1; /* Distribute available vertical space equally among items */
+    margin: 30px 0; /* Add some vertical margin between items */
 }
