--- a/index.css
+++ b/index.css
@@ -2,6 +2,16 @@ html {
     background-color: black;
 }
 
+h1 {
+    display: block;
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 100;
+    font-size: 40px;
+    text-decoration: none;
+    color: white;
+}
+
 a {
     display: block;
     text-align: center;
