--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ html {
     background-color: black;
 }
 
-h1 {
+h1, h2 {
     display: block;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
